--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <version>1.2.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+		<dependency>
+			<!-- jsoup HTML parser library @ http://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
