--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
             <version>1.2.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.3</version>
+		</dependency>
 	</dependencies>
 
 	<build>
