--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,14 @@
             <version>1.2.0.RELEASE</version>
             <scope>test</scope>
         </dependency>
-		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
 			<version>2.6.3</version>
 		</dependency>
 
