--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 			<version>2.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.10.8</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
